[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Menu/NameInput.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 43.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Insta Rogue"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -179.0
margin_right = 90.0
margin_bottom = -106.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Play"

[node name="NameInput" type="Node" parent="."]
script = ExtResource( 4 )

[node name="PlayerName" type="LineEdit" parent="NameInput"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -194.5
margin_right = 137.0
margin_bottom = -151.5
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="NameInput"]
margin_left = 109.0
margin_top = 127.0
margin_right = 270.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.270588, 0.439216, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Adventurer:"
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="text_changed" from="NameInput/PlayerName" to="." method="_on_PlayerName_text_changed"]
